--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=QL50
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=QL50
+#spring.datasource.username=sa
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+server.port=8080
